[gd_scene load_steps=3 format=1]

[ext_resource path="res://addons/vr_mobile_camera/vr_mobile_camera.gd" type="Script" id=1]
[ext_resource path="res://addons/stereo_camera/stereo_camera.tscn" type="PackedScene" id=2]

[node name="vr_mobile_camera" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )
walking_speed = 1.0
magnetometer_interpolation = 8
enable_yaw = true
enable_pitch = true
enable_roll = true
show_data = false

[node name="magneto" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0.000824451 )

[node name="compass" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="center" type="Spatial" parent="compass"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="target" type="Spatial" parent="compass/center"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00476074, -0.416138 )

[node name="origin" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="yaw" type="Spatial" parent="origin"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="pitch" type="Spatial" parent="origin/yaw"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="roll" type="Spatial" parent="origin/yaw/pitch"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="stereo_camera" parent="origin/yaw/pitch/roll" instance=ExtResource( 2 )]

[node name="accelerometer" type="Label" parent="."]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 266.0
margin/bottom = 40.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="magnometer" type="Label" parent="."]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 50.0
margin/right = 266.0
margin/bottom = 80.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gyroscope" type="Label" parent="."]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 90.0
margin/right = 266.0
margin/bottom = 120.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_yaw" type="Label" parent="."]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 460.0
margin/right = 266.0
margin/bottom = 490.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_pitch" type="Label" parent="."]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 500.0
margin/right = 266.0
margin/bottom = 530.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_roll" type="Label" parent="."]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 540.0
margin/right = 266.0
margin/bottom = 570.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


